tests/compile_fail/mpfr_header_must_not_expose_mpf.cpp
#include <mpfrxx_mkII.h>

int main()
{
    gmpxx::mpf_class value;
    (void)value;
    return 0;
}
